syntax = "proto3";

package users;

import "common.proto";

option go_package = "./users";

// 用户信息
message User {
  // 手机号（主键）
  string phone = 1;
  // 用户名
  string username = 2;
  // 是否激活
  bool is_active = 3;
  // 创建时间
  common.Timestamp created_at = 4;
  // 更新时间
  common.Timestamp updated_at = 5;
  // 用户角色列表
  repeated string role_ids = 6;
}

// 登录请求
message LoginRequest {
  // 手机号
  string phone = 1;
  // 密码
  string password = 2;
}

// 认证响应
message AuthResponse {
  // 用户信息
  User user = 1;
  // JWT token
  string token = 2;
  // token过期时间
  common.Timestamp expires_at = 3;
}

// 获取用户请求
message GetUserRequest {
  // 用户手机号
  string phone = 1;
}

// 创建用户请求
message CreateUserRequest {
  // 手机号
  string phone = 1;
  // 用户名
  string username = 2;
  // 密码
  string password = 3;
  // 角色ID列表
  repeated string role_ids = 4;
}

// 更新用户请求
message UpdateUserRequest {
  // 手机号
  string phone = 1;
  // 用户名（可选）
  optional string username = 2;
  // 是否激活（可选）
  optional bool is_active = 3;
  // 角色ID列表（可选）
  repeated string role_ids = 4;
}

// 用户列表请求
message GetUsersRequest {
  // 分页信息
  common.PaginationRequest pagination = 1;
  // 搜索关键词（可选）
  optional string search = 2;
  // 是否激活过滤（可选）
  optional bool is_active = 3;
}

// 用户列表响应
message GetUsersResponse {
  // 用户列表
  repeated User users = 1;
  // 分页信息
  common.PaginationResponse pagination = 2;
}

// 注册请求
message RegisterRequest {
  // 手机号
  string phone = 1;
  // 用户名
  string username = 2;
  // 密码
  string password = 3;
  // 验证码
  string verification_code = 4;
}

// 创建超级管理员请求
message CreateSuperAdminRequest {
  // 手机号
  string phone = 1;
  // 用户名
  string username = 2;
  // 密码
  string password = 3;
  // 超级管理员密钥
  string admin_key = 4;
}

// 用户服务定义
service UserService {
  // 用户登录
  rpc Login(LoginRequest) returns (AuthResponse);
  
  // 用户注册
  rpc Register(RegisterRequest) returns (AuthResponse);
  
  // 获取当前用户信息
  rpc GetProfile(GetUserRequest) returns (User);
  
  // 获取用户信息
  rpc GetUser(GetUserRequest) returns (User);
  
  // 获取用户列表
  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse);
  
  // 创建用户
  rpc CreateUser(CreateUserRequest) returns (User);
  
  // 更新用户
  rpc UpdateUser(UpdateUserRequest) returns (User);
  
  // 删除用户
  rpc DeleteUser(GetUserRequest) returns (common.ResponseStatus);
  
  // 创建超级管理员
  rpc CreateSuperAdmin(CreateSuperAdminRequest) returns (AuthResponse);
} 